Fixed Bugs (from 8 month old code) Started Basic Dashboard, Wrote Functions Updated to New Data (and Format)

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -11,6 +11,15 @@
 <body>
 
     This is our future Dashboard.
+    This is an unformatted version, don't worry. Just for development purposes. <br>
+
+    <h1>Dashboard</h1>
+
+    <h2>Advertisements, Topics, Viewership and Information About You</h2>
+
+    <p>Ads Seen Per Day: {{ ad_view_freq }}</p>
+    <p>Account Based In: {{ account_based_in }}</p>
+    <p>Possible Phone Numbers: {{ possible_phone_numbers }}</p>
 
 </body>
 
