Added more dashboard items. Fixed some bugs.

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -17,9 +17,11 @@
 
     <h2>Advertisements, Topics, Viewership and Information About You</h2>
 
-    <p>Ads Seen Per Day: {{ ad_view_freq }}</p>
-    <p>Account Based In: {{ account_based_in }}</p>
-    <p>Possible Phone Numbers: {{ possible_phone_numbers }}</p>
+    <p>You see approximately {{ ad_view_freq }} advertisements per day</p>
+    <p>Your account is based in {{ account_based_in }}</p>
+    <p>Your possible phone number is {{ possible_phone_numbers }}</p>
+    <p>You latest topics are {{ latest_topics }}</p>
+    <p>Your most common activity is {{ most_active_zone }}</p>
 
 </body>
 
