Added new functions, stuck at emoji processing

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -23,6 +23,14 @@
     <p>You latest topics are {{ latest_topics }}</p>
     <p>Your most common activity is {{ most_active_zone }}</p>
 
+    <h2>Comments</h2>
+    <p>You've commented on {{ total_comments }} across {{ total_accounts_commented_on }} accounts, with {{
+        total_post_comments }} on posts and {{ total_reel_comments }} on reels with an average length of {{
+        average_comment_length }}</p>
+    <p>You've used {{ total_emojis_used }} emojis, and {{ most_used_emoji }} tops the chart, appearing a whopping {{
+        most_used_emoji_times }} times</p>
+
+
 </body>
 
 </html>
